# latex2md

./: LICENSE  README.md  latex2md.py  pyproject.toml  setup.cfg  setup.py
latex2md/: __init__.py  cli.py  converter.py
latex2md.egg-info/: PKG-INFO
