[metadata]
name = latex2md
version = 0.1.0
author = ccchen
author_email = 1421243966@qq.com
description = A tool to convert LaTeX documents to Markdown format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/latex2md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # 如果有依赖包，在这里列出

[options.entry_points]
console_scripts =
    latex2md = latex2md.cli:main
